# Any2MD

./: .gitignore  Any2MD.spec  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  run.py  run_cli.py  run_gui.py
.github/workflows/: ci.yml  release.yml  semantic-release.yml
any2md/: __init__.py  cleaner.py  cli.py  converter.py  gui.py  gui_app.py  unzipper.py
docs/: development.md  usage.md
scripts/: prune_qt.py
tests/: test_cleaner.py  test_converter.py  test_unzipper.py
