[project]
name = "any2md"
version = "1.4.0"
description = "批量转换各种文档格式为 Markdown"
authors = [{ name = "dustbinchen" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["markdown", "converter", "document", "markitdown"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "markitdown>=0.1.4",
    "pdfminer.six>=20231228",
    "python-pptx>=0.6.23",
    "openpyxl>=3.1.0",
    "mammoth>=1.8.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.11.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
gui = [
    "PyQt6>=6.6.0",
]
legacy = [
    "xlrd>=2.0.2",
]
full = [
    "markitdown[all]>=0.1.4",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
any2md = "any2md.cli:app"

[project.gui-scripts]
any2md-gui = "any2md.gui:run_gui"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["any2md"]

[tool.semantic_release]
version_variables = [
    "any2md/__init__.py:__version__",
]
version_toml = [
    "pyproject.toml:project.version"
]
branches = { main = { match = "(master|main)" } }
upload_to_pypi = false
upload_to_release = false
build_command = "python -m pip install build && python -m build"
